# direct-method-library

./: .copilot-instructions.md  .gitignore  LICENSE  README.md  _version.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pr-validation.yml  release.yml
docs/api/: README.md
docs/examples/: README.md
global-changelog/: CHANGELOG.md
tools/: release-notes.py  release.js  version-sync.js
